Fix horizontal scroll UX bug

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -92,6 +92,12 @@
     }
 }
 
+@media (max-width: 1280px) {
+    .header {
+        padding: 18px 30px;
+    }
+}
+
 @media (max-width: 600px) {
     .header {
         margin: 0 auto;
