--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -127,7 +127,7 @@ PAGE
 */
 @mixin page {
     background-color: $blue-100;
-    min-width: 100vw;
+    min-width: 100%;
     min-height: 100vh;
     padding: 30px;
 }
